# workflow-api

./: .gitignore  Dockerfile  Makefile  README.md  STREAMLIT_APP_INFO.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_DETAILS.md  STREAMLIT_SETUP.md  STREAMLIT_USAGE.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/app/: __init__.py  __main__.py  web.py
tests/: test_web.py
